Changed the name of app, seprated routes and gpio pi functions

--- a/pipinApi.ini
+++ b/pipinApi.ini
@@ -4,10 +4,10 @@ module = wsgi
 master = true
 processes = 5
 
-wsgi-file = /opt/lightcontrol/wsgi.py
+wsgi-file = /opt/pipincontrol/wsgi.py
 callable = app
 
-socket = lightcontrol.sock
+socket = pipincontrol.sock
 chmod-socket = 666
 vacuum = true
 
